--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "zizaco/mongolid-laravel": "^0.8"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
