--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "zizaco/mongolid-laravel": "^0.8"
+        "zizaco/mongolid-laravel": "^0.8",
+        "fzaninotto/faker": "dev-master"
 
     },
     "require-dev": {
